web crawl added and can detect language

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,19 @@
 asgiref==3.8.1
+beautifulsoup4==4.12.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
 Django==5.0.6
+django-cors-headers==4.3.1
 djangorestframework==3.15.1
+idna==3.7
+langid==1.1.6
+lxml==5.2.2
+numpy==1.26.4
 pillow==10.3.0
 psycopg2==2.9.9
+pycountry==23.12.11
 pytz==2024.1
+requests==2.32.2
+soupsieve==2.5
 sqlparse==0.5.0
+urllib3==2.2.1
