--- a/frontend/nv-front/package.json
+++ b/frontend/nv-front/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.10.3",
     "sharp": "^0.33.4"
   },
   "devDependencies": {
