--- a/frontend/nv-front/package.json
+++ b/frontend/nv-front/package.json
@@ -10,11 +10,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.19",
+    "@mui/x-date-pickers": "^7.6.2",
     "axios": "^1.7.2",
+    "dayjs": "^1.11.11",
     "js-cookie": "^3.0.5",
     "next": "14.2.3",
     "react": "^18",
+    "react-country-region-selector": "^3.6.1",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
