--- a/frontend/nv-front/package.json
+++ b/frontend/nv-front/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.15.19",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
     "@mui/x-date-pickers": "^7.6.2",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
@@ -25,6 +26,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
+    "react-share": "^5.1.0",
     "sharp": "^0.33.4"
   },
   "devDependencies": {
