--- a/frontend/nv-front/package.json
+++ b/frontend/nv-front/package.json
@@ -26,6 +26,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
+    "react-scroll": "^1.9.0",
     "react-share": "^5.1.0",
     "sharp": "^0.33.4"
   },
@@ -34,6 +35,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll": "^1.8.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
