--- a/frontend/nv-front/package.json
+++ b/frontend/nv-front/package.json
@@ -28,6 +28,7 @@
     "react-intersection-observer": "^9.10.3",
     "react-scroll": "^1.9.0",
     "react-share": "^5.1.0",
+    "react-simple-pull-to-refresh": "^1.3.3",
     "sharp": "^0.33.4"
   },
   "devDependencies": {
